--- a/src/pages/4_2.html
+++ b/src/pages/4_2.html
@@ -14,8 +14,7 @@
     <header class="header">
         <div class="header-menu" onclick="show_menu()"></div>
 
-        <div class="header-title">ТЕМА 4.2 Способы защиты прав граждан. Судебная защита прав граждан. Правила оформления
-            претензий и исков</div>
+        <div class="header-title">ТЕМА 4.2 Способы защиты прав граждан. Судебная защита прав граждан. Правила оформления претензий и исков</div>
     </header>
 
     <main class="main">
