add new chacnges suka

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="src/CSS-JS/style.css" />
 		<link rel="stylesheet" href="src/CSS-JS/adaptive/style1000.css" />
 		<link rel="stylesheet" href="src/CSS-JS/adaptive/style750.css" />
-		<link rel="stylesheet" href="src/pages/Методические рекомендации к изучению курса/style.css" />
+		<link rel="stylesheet" href="./src/pages/Другое/Методические рекомендации к изучению курса/style.css">
 		<title>Электронный учебник</title>
 	</head>
 	<body>
@@ -142,7 +142,7 @@
 					<font color="white">gggg</font>Внимание! Если в ходе изучения дисциплины у Вас возникают трудности, то Вы всегда можете к преподавателю прийти на дополнительные занятия, которые проводятся согласно графику. Время проведения дополнительных занятий Вы сможете узнать у преподавателя, а также познакомившись с графиком их проведения, размещенном на двери кабинета преподавателя.<br>
 					<font color="white">gggg</font>В случае, если Вы пропустили занятия, Вы также всегда можете прийти на консультацию к преподавателю в часы дополнительных занятий.
 					
-					<table border="1" cellpadding="20" cellspacing="0" class="table_2">
+					<br><table border="1" cellpadding="20" cellspacing="0" class="table_2">
 						<caption><b>ОБРАЗОВАТЕЛЬНЫЙ МАРШРУТ ПО ДИСЦИПЛИНЕ</b><br>
 							<font color="white">gggg</font></caption>
 						<tr>
