final-fixes-rinat

--- a/src/pages/Другое/Основная литература/основная_литература.html
+++ b/src/pages/Другое/Основная литература/основная_литература.html
@@ -17,6 +17,10 @@
         h2 {
             margin-bottom: 40px;
         }
+
+		li{
+			margin: 15px;
+		}
     </style>
 </head>
 
@@ -30,25 +34,6 @@
     <main class="main">
         <div class="main-container">
             <h1>Список основоной литературы</h1>
-
-            <ol>
-                <li>Правовое обеспечение профессиональной деятельности: Учебное пособие / А.И. Тыщенко. - М.: ИЦ РИОР:
-                    НИЦ ИНФРА-М, 2014. - 216 с.: 70x100 1/32. - (СПО). (обложка, карм. формат) ISBN 978-5-369-01069-3
-                </li>
-                <li>Правовое обеспечение профессиональной деятельности: Учебное пособие / Тыщенко А. И. - 2-е изд. - М.:
-                    ИЦ РИОР, НИЦ ИНФРА-М, 2016. - 203 с.: 70x100 1/32. - (СПО) (Обложка) ISBN 978-5-369-01466-0</li>
-                <li>Правовое обеспечение профессиональной деятельности: учебник / М. А. Гуреева. — М. : ИД «ФОРУМ»:
-                    ИНФРА-М, 2017. — 240 с. — (Профессиональное образование).</li>
-                <li>Правовое обеспечение профессиональной деятельности: учебник / А.И. Тыщенко. — 4-е изд. — М.: РИОР:
-                    ИНФРА-М, 2017. — 221 с. — (Среднее профессиональное образование). — https://doi.org/10.12737/24252.
-                </li>
-                <li>Правовое обеспечение профессиональной деятельности: учебник / А.Г. Хабибулин, К.Р. Мурсалимов. — М.:
-                    ИД «ФОРУМ» : ИНФРА-М, 2017. — 333 с. — (Профессиональное образование).</li>
-                <li>Правовое обеспечение профессиональной деятельности: учебник / А.Г. Хабибулин, К.Р. Мурсалимов. — М.:
-                    ИД «ФОРУМ» : ИНФРА-М, 2018. — 333 с. — (Среднее профессиональное образование).</li>
-                <li>Правовое обеспечение профессиональной деятельности: учебник / М.А. Гуреева. — М. : ИД «ФОРУМ»:
-                    ИНФРА-М, 2018. — 239 с. — (Среднее профессиональное образование).</li>
-            </ol><br><br>
 
             <h2>Нормативные акты</h2>
 
@@ -65,6 +50,37 @@
                 <li>Арбитражный процессуальный кодекс РФ от 24.07.2002г. (с изм. и доп.) // http://www.consultant.ru
                 </li>
             </ol><br><br><br>
+
+			<ul>
+				<li>
+					Анисимов А. П. Правовое обеспечение профессиональной деятельности :
+					учебник и практикум для СПО / А. П. Анисимов, А. Я. Рыженков, А. Ю.
+					Чикильдина ; под редакцией А. Я. Рыженкова. — 5-е изд., перераб. и доп. —
+					Москва : Издательство Юрайт, 2022. — 339 с. — (Профессиональное
+					образование). — URL: https: // urait.ru. — Режим доступа: по подписке.
+				</li>
+
+				<li>
+					Николюкин С. В. Правовое обеспечение профессиональной деятельности :
+					учебник и практикум для СПО / С. В. Николюкин. — Москва : Издательство
+				</li>
+
+				<li>
+					Юрайт, 2022. — 248 с. — (Профессиональное образование). — URL: https: //
+					urait.ru. — Режим доступа: по подписке.
+					Некрасов С.И. Правовое обеспечение профессиональной деятельности :
+					учебное пособие для СПО / С.И. Некрасов, Е.В. Зайцева-Савкович, А.В.
+				</li>
+
+				<li>
+					Питрюк.- Москва : Юстиция, 2020.- 212 с. — (Среднее профессиональное
+					образование). – 75 экз.
+					Некрасов С.И. Правовое обеспечение профессиональной деятельности :
+					учебное пособие для СПО / Некрасов С.И., Зайцева-Савкович Е.В., Питрюк
+					А.В. — Москва : Юстиция, 2022. — 211 с. — (Среднее профессиональное
+					образование). — URL: https://www.book.ru. — Режим доступа: по подписке.
+				</li><br><br><br>
+			</ul>
         </div>
     </main>
 
