--- a/src/pages/Другое/Рекомендуемая литература/рекомендуемая_литература.html
+++ b/src/pages/Другое/Рекомендуемая литература/рекомендуемая_литература.html
@@ -13,14 +13,20 @@
 		<header class="header">
 			<div class="header-menu" onclick="show_menu()"></div>
 
-			<div class="header-title">Дополнительная литература</div>
+			<div class="header-title">РЕКОМЕНДУЕМАЯ ЛИТЕРАТУРА ЭЛЕКТРОННЫХ РЕСУРСОВ</div>
 		</header>
 
 		<main class="main">
 			<div class="main-container">
-                <h1>Дополнительная литература+</h1>
+                <h1>РЕКОМЕНДУЕМАЯ ЛИТЕРАТУРА ЭЛЕКТРОННЫХ РЕСУРСОВ</h1>
 
-                Тут доп. литература
+				<ol>
+					<li><a href="http://www.consultant.ru/popular/pensia/pensiahelp/">http://www.consultant.ru/popular/pensia/pensiahelp/</a> - правовая система Консультант+</li><br>
+					<li><a href="http://ru.wikipedia.org/wiki/">http://ru.wikipedia.org/wiki/</a> - Материал из Википедии — свободной энциклопедии</li><br>
+					<!-- <li>Электронная библиотека: портал [Электронный ресурс]. - Режим доступа: <a href="http://www.alleng.ru/index.html">http://www.alleng.ru/index.html</a><br> -->
+						<!-- Дата обращения: 01.03.2018.</li><br> -->
+					<li><a href="http://www.roskodeks.ru/codecs/441.html">http://www.roskodeks.ru/codecs/441.html</a> - РОСКОДЕКС, российское законодательство	</li><br>
+				</ol>
 			</div>
 		</main>
 
