add answers to tests

--- a/src/pages/Тесты к разделам/Тест к разделу 4/4-Test.html
+++ b/src/pages/Тесты к разделам/Тест к разделу 4/4-Test.html
@@ -30,37 +30,36 @@
 					<input type="radio" name="answer2" id="2-B"><label for="2-B">б) уведомительный;<br></label>
 					<input type="radio" name="answer2" id="2-C"><label for="2-C">в) нормативно-явочный;<br></label>
                     <input type="radio" name="answer2" id="2-D"><label for="2-D">г) разрешительный.<br><br></label>
-					3. Должности, устанавливаемые Конституцией РФ и федераль­ными законами, конституциями, уставами субъектов Россий­ской Федерации для непосредственного исполнения полно­мочий государственных органов, относятся к государствен­ным должностям:<br>
-					<input type="radio" name="answer3" id="3-A"><label for="3-A">а) категории А;<br></label>
-					<input type="radio" name="answer3" id="3-B"><label for="3-B">б) категории Б;<br></label>
-                    <input type="radio" name="answer3" id="3-C"><label for="3-C">в) категории В;<br></label>
-					<input type="radio" name="answer3" id="3-D"><label for="3-D">г) категории Г.<br><br></label>
-					4. Предельный возрастной срок нахождения на государственной службе определен законодателем:<br>
-					<input type="radio" name="answer4" id="4-A"><label for="4-A">а) в 55 лет;<br></label>
-					<input type="radio" name="answer4" id="4-B"><label for="4-B">б) в 60 лет;<br></label>
-                    <input type="radio" name="answer4" id="4-C"><label for="4-C">в) в 65 лет;<br></label>
-					<input type="radio" name="answer4" id="4-D"><label for="4-D">г) в 70 лет.<br><br></label>
-					5. Федеральный закон «Об основах государственной службы РФ» не запрещает государственным служащим:<br>
-					<input type="radio" name="answer5" id="5-A"><label for="5-A">а) принимать участие в забастовках;<br></label>
-					<input type="radio" name="answer5" id="5-B"><label for="5-B">б) заниматься предпринимательской деятельностью лично или через доверенных лиц;<br></label>
-                    <input type="radio" name="answer5" id="5-C"><label for="5-C">в) заниматься педагогической деятельностью;<br></label>
-					<input type="radio" name="answer5" id="5-D"><label for="5-D">г) получать гонорары за публикации и выступления в качестве государственного служащего.<br><br></label>
-					6. В какой срок с момента поступления в государственный орган должна быть рассмотрена жалоба граждан, не требующая до­полнительного изучения и проверки:<br>
-					<input type="radio" name="answer6" id="6-A"><label for="6-A">а) не позднее 7 дней;;<br></label>
-					<input type="radio" name="answer6" id="6-B"><label for="6-B">б) не позднее 15 дней;<br></label>
-					<input type="radio" name="answer6" id="6-C"><label for="6-C">в) не позднее 3 недель;<br></label>
-					<input type="radio" name="answer6" id="6-D"><label for="6-D">г) не позднее 1 месяца.<br><br></label>
-					7. Основанием для приостановления и отмены акта государст­венного управления может быть:<br>
-					<input type="radio" name="answer7" id="7-A"><label for="7-A">а) исполнение предписанного в акте содержания;<br></label>
-					<input type="radio" name="answer7" id="7-B"><label for="7-B">б) его противоречие, несоответствие законодательству;<br></label>
-					<input type="radio" name="answer7" id="7-C"><label for="7-C">б) его противоречие, несоответствие законодательству;<br></label>
-					<input type="radio" name="answer7" id="7-D"><label for="7-D">г) любое из перечисленных выше оснований.<br><br></label>
-					8. Какая из перечисленных ниже мер относится к мерам адми­нистративного принуждения, применяемым в силу государст­венных нужд:<br>
-					<input type="radio" name="answer8" id="8-A"><label for="8-A">а) введение карантина;<br></label>
-					<input type="radio" name="answer8" id="8-B"><label for="8-B">б) закрытие участков границы;<br></label>
-                    <input type="radio" name="answer8" id="8-C"><label for="8-C">в) регистрация оружия;<br></label>
-					<input type="radio" name="answer8" id="8-D"><label for="8-D">г) реквизиция.<br><br></label>
-                    9. Официальный документ, фиксирующий факт совершения ад­министративного правонарушения, называется:<br>
+					3. В какой срок с момента поступления в государственный орган должна быть рассмотрена жалоба граждан, не требующая до­полнительного изучения и проверки:<br>
+					<input type="radio" name="answer3" id="3-A"><label for="3-A">а) не позднее 7 дней;<br></label>
+					<input type="radio" name="answer3" id="3-B"><label for="3-B">б) не позднее 15 дней;<br></label>
+                    <input type="radio" name="answer3" id="3-C"><label for="3-C">в) не позднее 3 недель;<br></label>
+					<input type="radio" name="answer3" id="3-D"><label for="3-D">г) не позднее 1 месяца.<br><br></label>
+					4. Основанием для приостановления и отмены акта государст­венного управления может быть:<br>
+					<input type="radio" name="answer4" id="4-A"><label for="4-A">а) исполнение предписанного в акте содержания;<br></label>
+					<input type="radio" name="answer4" id="4-B"><label for="4-B">б) его противоречие, несоответствие законодательству;<br></label>
+					<input type="radio" name="answer4" id="4-C"><label for="4-C">в) любое из перечисленных выше оснований.<br><br></label>
+					5. Официальный документ, фиксирующий факт совершения ад­министративного правонарушения, называется:<br>
+					<input type="radio" name="answer5" id="5-A"><label for="5-A">а) решение;<br></label>
+					<input type="radio" name="answer5" id="5-B"><label for="5-B">б) протокол;<br></label>
+                    <input type="radio" name="answer5" id="5-C"><label for="5-C">в) жалоба;<br></label>
+					<input type="radio" name="answer5" id="5-D"><label for="5-D">г) заявление.<br><br></label>
+					6. С какого возраста физическое лицо может быть привлечено к административной ответственности:<br>
+					<input type="radio" name="answer6" id="6-A"><label for="6-A">а) с 14 лет;<br></label>
+					<input type="radio" name="answer6" id="6-B"><label for="6-B">б) с 16 лет;<br></label>
+					<input type="radio" name="answer6" id="6-C"><label for="6-C">в) с 18 лет;<br></label>
+					<input type="radio" name="answer6" id="6-D"><label for="6-D">г) с 21 лет.<br><br></label>
+					7. Какой из перечисленных ниже видов административных взы­сканий может применяться и в качестве основного, и в каче­стве дополнительного:<br>
+					<input type="radio" name="answer7" id="7-A"><label for="7-A">а) конфискация предмета;<br></label>
+					<input type="radio" name="answer7" id="7-B"><label for="7-B">б) исправительные работы;<br></label>
+					<input type="radio" name="answer7" id="7-C"><label for="7-C">в) штраф;<br></label>
+					<input type="radio" name="answer7" id="7-D"><label for="7-D">г) выдворение.<br><br></label>
+					8. Не допускается использование гражданских прав с целью:<br>
+					<input type="radio" name="answer8" id="8-A"><label for="8-A">а) самозащиты прав;<br></label>
+					<input type="radio" name="answer8" id="8-B"><label for="8-B">б) ограничения конкуренции на рынке;<br></label>
+                    <input type="radio" name="answer8" id="8-C"><label for="8-C">в) признания оспоримой сделки недействительной;<br></label>
+					<input type="radio" name="answer8" id="8-D"><label for="8-D">г) взыскания неустойки.<br><br></label>
+                    9. Во дворе дома неизвестные ночью прокололи колеса всем припаркованным автомобилям. От их действий пострадали более 10 автомобилей. Их поступок это:<br>
 					<input type="radio" name="answer9" id="9-A"><label for="9-A">а) решение;<br></label>
                     <input type="radio" name="answer9" id="9-B"><label for="9-B">б) протокол;<br></label>
 					<input type="radio" name="answer9" id="9-C"><label for="9-C">в) жалоба;<br></label>
