change question for test 4

--- a/src/pages/Тесты к разделам/Тест к разделу 4/4-Test.html
+++ b/src/pages/Тесты к разделам/Тест к разделу 4/4-Test.html
@@ -60,46 +60,65 @@
                     <input type="radio" name="answer8" id="8-C"><label for="8-C">в) признания оспоримой сделки недействительной;<br></label>
 					<input type="radio" name="answer8" id="8-D"><label for="8-D">г) взыскания неустойки.<br><br></label>
                     9. Во дворе дома неизвестные ночью прокололи колеса всем припаркованным автомобилям. От их действий пострадали более 10 автомобилей. Их поступок это:<br>
-					<input type="radio" name="answer9" id="9-A"><label for="9-A">а) решение;<br></label>
-                    <input type="radio" name="answer9" id="9-B"><label for="9-B">б) протокол;<br></label>
-					<input type="radio" name="answer9" id="9-C"><label for="9-C">в) жалоба;<br></label>
-                    <input type="radio" name="answer9" id="9-D"><label for="9-D">г) заявление.<br><br></label>
-					10. С какого возраста физическое лицо может быть привлечено к административной ответственности:<br>
-                    <input type="radio" name="answer10" id="10-A"><label for="10-A">а) с 14 лет;<br></label>
-                    <input type="radio" name="answer10" id="10-B"><label for="10-B">а) с 16 лет;<br></label>
-                    <input type="radio" name="answer10" id="10-C"><label for="10-C">а) с 18 лет;<br></label>
-                    <input type="radio" name="answer10" id="10-D"><label for="10-D">а) с 21 лет;<br><br></label>
-                    11. Какой из перечисленных ниже видов административных взы­сканий может применяться и в качестве основного, и в каче­стве дополнительного:<br>
-                    <input type="radio" name="answer11" id="11-A"><label for="11-A">a) конфискация предмета;<br></label>
-                    <input type="radio" name="answer11" id="11-B"><label for="11-B">б) исправительные работы;<br></label>
-                    <input type="radio" name="answer11" id="11-C"><label for="11-C">в) штраф;<br></label>
-                    <input type="radio" name="answer11" id="11-D"><label for="11-D">г) выдворение.<br><br></label>
-                    12. Факультативной стадией производства по делу об админист­ративном правонарушении является:<br>
-                    <input type="radio" name="answer12" id="12-A"><label for="12-A">а) возбуждение дела;<br></label>
-                    <input type="radio" name="answer12" id="12-B"><label for="12-B">б) рассмотрение дела;<br></label>
-                    <input type="radio" name="answer12" id="12-C"><label for="12-C">в) обжалование и пересмотр постановления;-<br></label>
-                    <input type="radio" name="answer12" id="12-D"><label for="12-D">г) исполнение постановления.<br><br></label>
-                    13.Защита гражданских прав осуществляется путем:<br>
-                    <input type="radio" name="answer13" id="13-A"><label for="13-A">а) отказа от пресечения действий, создающих угрозу нарушения прав, компенсации морального вреда;<br></label>
-                    <input type="radio" name="answer13" id="13-B"><label for="13-B">б) отказа восстановить положение, существовавшее до нарушения прав, возмещения убытков;<br></label>
-                    <input type="radio" name="answer13" id="13-C"><label for="13-C">в) восстановления положения, существовавшего до нарушения прав, и пресечения действий, нарушающих право или создающих угрозу его нарушения;<br></label>
-                    <input type="radio" name="answer13" id="13-D"><label for="13-D">г) отказа от пресечения действий, нарушающих право, взыскания неустойки.<br><br></label>
-                    14.Разумность действий и добросовестность участников гражданских правоотношений предполагаются в случаях, когда:<br>
-                    <input type="radio" name="answer14" id="14-A"><label for="14-A">а) закон ставит защиту гражданских прав в зависимость от того, осуществлялись ли эти права разумно и добросовестно;<br></label>
-                    <input type="radio" name="answer14" id="14-B"><label for="14-B">б) закон ставит защиту гражданских прав в зависи­мость от условий, предусмотренных договором;<br></label>
-                    <input type="radio" name="answer14" id="14-C"><label for="14-C">в) закон ставит защиту гражданских прав в зависимость от принятых на себя обязательств участниками договора;<br></label>
-                    <input type="radio" name="answer14" id="14-D"><label for="14-D">г) все указанное в пп. «а» и «в».<br><br></label>
-                    15. Не допускается использование гражданских прав с целью:<br>
-                    <input type="radio" name="answer15" id="15-A"><label for="15-A">а) самозащиты прав;<br></label>
-                    <input type="radio" name="answer15" id="15-B"><label for="15-B">6) ограничения конкуренции на рынке;<br></label>
-                    <input type="radio" name="answer15" id="15-C"><label for="15-C">в) признания оспоримой сделки недействительной;<br></label>
-                    <input type="radio" name="answer15" id="15-D"><label for="15-D">г) взыскания неустойки<br><br></label>
-                    16. Способы защиты гражданских прав:<br>
-                    <input type="radio" name="answer16" id="16-A"><label for="16-A">а) абсолютные<br></label>
-                    <input type="radio" name="answer16" id="16-B"><label for="16-B">б) относительные<br></label>
-                    <input type="radio" name="answer16" id="16-C"><label for="16-C">в) взыскание неустойки<br></label>
-                    <input type="radio" name="answer16" id="16-D"><label for="16-D">г) приобретение имущества<br></label>
-					<input type="radio" name="answer16" id="16-E"><label for="16-E">д) возмещение убытков<br><br></label>
+					<input type="radio" name="answer9" id="9-A"><label for="9-A">а) разбой;<br></label>
+					<input type="radio" name="answer9" id="9-B"><label for="9-B">б) угон;<br></label>
+                    <input type="radio" name="answer9" id="9-C"><label for="9-C">в) хищение;<br></label>
+					<input type="radio" name="answer9" id="9-D"><label for="9-D">г) хулиганство;<br></label>
+                    <input type="radio" name="answer9" id="9-E"><label for="9-E">д) мелкое хулиганство.<br><br></label>
+					10. В городе Н. по действующему графику отключают уличное освещение с период с 01:20 до 05:20 часов. Таким образом, нарушаются права горожан<br>
+                    <input type="radio" name="answer10" id="10-A"><label for="10-A">а) на безопасность нахождений на улицах города;<br></label>
+                    <input type="radio" name="answer10" id="10-B"><label for="10-B">б) на безопасность в вечернее и ночное время;<br></label>
+                    <input type="radio" name="answer10" id="10-D"><label for="10-C">В) нарушение спокойствия в вечернее и ночное время суток.<br><br></label>
+                    11. Установите соответствие:<br>
+                    <table border="1" cellpadding="15" cellspacing="0">
+						<tr>
+							<td></td>
+							<td>Право</td>
+							<td>Пай</td>
+							<td>Подсудность</td>
+							<td>Пеня</td>
+						</tr>
+						<tr>
+							<td>Сумма денежного взноса, уплачиваемая гражданином, юридическим лицом - членом кооперативной организации, товарищества</td>
+							<td><input type="radio" name="answer11-1" id="11-AA"></td>
+							<td><input type="radio" name="answer11-1" id="11-AB"></td>
+							<td><input type="radio" name="answer11-1" id="11-AC"></td>
+							<td><input type="radio" name="answer11-1" id="11-AD"></td>
+						</tr>
+						<tr>
+							<td>Санкция за несвоевременное выполнение денежных обязательств. Начисляется в процентах к сумме невыполненного обязательства, за каждый день просрочки</td>
+							<td><input type="radio" name="answer11-2" id="11-BA"></td>
+							<td><input type="radio" name="answer11-2" id="11-BB"></td>
+							<td><input type="radio" name="answer11-2" id="11-BC"></td>
+							<td><input type="radio" name="answer11-2" id="11-BD"></td>
+						</tr>
+						<tr>
+							<td>Распределение между судами дел, подлежащих рассмотрению по первой инстанции, т.е. установление конкретного суда, который должен разрешить данное дело.</td>
+							<td><input type="radio" name="answer11-3" id="11-CA"></td>
+							<td><input type="radio" name="answer11-3" id="11-CB"></td>
+							<td><input type="radio" name="answer11-3" id="11-CC"></td>
+							<td><input type="radio" name="answer11-3" id="11-CD"></td>
+						</tr>
+						<tr>
+							<td>Система общеобязательных социальных норм, охраняемых силой государства, обеспечивающего юридическую регламентацию общественных отношений в масштабе всего общества.</td>
+							<td><input type="radio" name="answer11-4" id="11-DA"></td>
+							<td><input type="radio" name="answer11-4" id="11-DB"></td>
+							<td><input type="radio" name="answer11-4" id="11-DC"></td>
+							<td><input type="radio" name="answer11-4" id="11-DD"></td>
+						</tr>
+					</table>
+                    12. Какой максимальный срок лишения свободы предусмотрен для несовершеннолетних, совершивших особо тяжкое преступление?<br>
+                    <input type="radio" name="answer12" id="12-A"><label for="12-A">а) 3 года;<br></label>
+                    <input type="radio" name="answer12" id="12-B"><label for="12-B">б) 5 лет;<br></label>
+                    <input type="radio" name="answer12" id="12-C"><label for="12-C">в) 8 лет;<br></label>
+                    <input type="radio" name="answer12" id="12-D"><label for="12-D">г) 10 лет;<br></label>
+                    <input type="radio" name="answer12" id="12-E"><label for="12-E">д) 15 лет.<br><br></label>
+                    13. Водитель сбил пешехода, который перебегал дорогу в неположенном месте. Пешеход убежал с места ДТП. Участник ДТП полицию не вызвал, сел в машину и уехал. За оставление места ДТП предусмотрено:<br>
+                    <input type="radio" name="answer13" id="13-A"><label for="13-A">а) наказание в виде лишения прав на срок от одного года до полутора лет;<br></label>
+                    <input type="radio" name="answer13" id="13-B"><label for="13-B">б) наказание в виде лишения прав на срок от шести месяцев до года;<br></label>
+                    <input type="radio" name="answer13" id="13-C"><label for="13-C">в) наказание в виде лишения прав на шесть месяцев;<br></label>
+                    <input type="radio" name="answer13" id="13-D"><label for="13-D">г) административный арест на срок до тридцати суток;<br></label>
+                    <input type="radio" name="answer13" id="13-E"><label for="13-E">д) лишения прав  на срок от одного года до полутора лет или административный арест на срок до пятнадцати суток.<br><br></label>
 					<button class="button" onclick="alert((ZaMirZaKiev()))">Завершить</button>
 				</div>
 			</div>
