--- a/src/pages/Тесты к разделам/Тест к разделу 4/4-Test.html
+++ b/src/pages/Тесты к разделам/Тест к разделу 4/4-Test.html
@@ -113,12 +113,19 @@
                     <input type="radio" name="answer12" id="12-C"><label for="12-C">в) 8 лет;<br></label>
                     <input type="radio" name="answer12" id="12-D"><label for="12-D">г) 10 лет;<br></label>
                     <input type="radio" name="answer12" id="12-E"><label for="12-E">д) 15 лет.<br><br></label>
-                    13. Водитель сбил пешехода, который перебегал дорогу в неположенном месте. Пешеход убежал с места ДТП. Участник ДТП полицию не вызвал, сел в машину и уехал. За оставление места ДТП предусмотрено:<br>
-                    <input type="radio" name="answer13" id="13-A"><label for="13-A">а) наказание в виде лишения прав на срок от одного года до полутора лет;<br></label>
-                    <input type="radio" name="answer13" id="13-B"><label for="13-B">б) наказание в виде лишения прав на срок от шести месяцев до года;<br></label>
-                    <input type="radio" name="answer13" id="13-C"><label for="13-C">в) наказание в виде лишения прав на шесть месяцев;<br></label>
-                    <input type="radio" name="answer13" id="13-D"><label for="13-D">г) административный арест на срок до тридцати суток;<br></label>
-                    <input type="radio" name="answer13" id="13-E"><label for="13-E">д) лишения прав  на срок от одного года до полутора лет или административный арест на срок до пятнадцати суток.<br><br></label>
+					13. Выберите виды Конституций по способу внесения в них поправок<br>
+					<input type="radio" name="answer13" id="13-A"><label for="13-A">октроированная<br></label>
+					<input type="radio" name="answer14" id="13-B"><label for="13-B">институциональная<br></label>
+					<input type="radio" name="answer15" id="13-C"><label for="13-C">гибкая<br></label>
+					<input type="radio" name="answer16" id="13-D"><label for="13-D">монархическая<br></label>
+					<input type="radio" name="answer17" id="13-E"><label for="13-E">жесткая<br></label>
+					<input type="radio" name="answer18" id="13-F"><label for="13-F">законодательная<br><br></label>
+                    14. Водитель сбил пешехода, который перебегал дорогу в неположенном месте. Пешеход убежал с места ДТП. Участник ДТП полицию не вызвал, сел в машину и уехал. За оставление места ДТП предусмотрено:<br>
+                    <input type="radio" name="answer19" id="14-A"><label for="14-A">а) наказание в виде лишения прав на срок от одного года до полутора лет;<br></label>
+                    <input type="radio" name="answer19" id="14-B"><label for="14-B">б) наказание в виде лишения прав на срок от шести месяцев до года;<br></label>
+                    <input type="radio" name="answer19" id="14-C"><label for="14-C">в) наказание в виде лишения прав на шесть месяцев;<br></label>
+                    <input type="radio" name="answer19" id="14-D"><label for="14-D">г) административный арест на срок до тридцати суток;<br></label>
+                    <input type="radio" name="answer19" id="14-E"><label for="14-E">д) лишения прав  на срок от одного года до полутора лет или административный арест на срок до пятнадцати суток.<br><br></label>
 					<button class="button" onclick="alert((ZaMirZaKiev()))">Завершить</button>
 				</div>
 			</div>
